# mai_arch_2026

./: README.md
lab1/: README.md  arch_lab_1.dsl
lab2/hotel-booking-api/: CMakeLists.txt  Dockerfile  README.md  docker-compose.yaml  openapi.yaml
lab2/hotel-booking-api/src/: auth.cpp  auth.hpp  dto.hpp  handlers.cpp  handlers.hpp  main.cpp  models.cpp  models.hpp
lab2/hotel-booking-api/tests/: api_tests.cpp
